another one run

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,8 @@ click = "^8.1.3"
 numpy = "^1.22.3"
 dvc = {extras = ["all"], version = "^2.10.2"}
 scipy = "^1.8.0"
+pywin32 = "^304"
+mlflow = "^1.25.1"
 
 [tool.poetry.dev-dependencies]
 
