--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ dvc = {extras = ["all"], version = "^2.10.2"}
 scipy = "^1.8.0"
 pywin32 = "^304"
 mlflow = "^1.25.1"
+python-dotenv = "^0.20.0"
 
 [tool.poetry.dev-dependencies]
 
