--- a/Docker/model_service/Dockerfile
+++ b/Docker/model_service/Dockerfile
@@ -1,4 +1,4 @@
-FROM python:3.9
+FROM python:3.10
 
 #
 WORKDIR /code
@@ -14,8 +14,7 @@ COPY ../../src/app /code/app
 COPY ./Docker/model_service/.env /code/app/.env
 
 
-RUN poetry config virtualenvs.create false \
-  && poetry install $(test "$YOUR_ENV" == production && echo "--no-dev") --no-interaction --no-ansi
+RUN poetry config virtualenvs.create false && poetry install $(test "$YOUR_ENV" == production && echo "--no-dev") --no-interaction --no-ansi
   
   
 CMD ["uvicorn", "app.inference:app", "--host", "0.0.0.0", "--port", "80"]
