--- a/Docker/model_service/pyproject.toml
+++ b/Docker/model_service/pyproject.toml
@@ -1,28 +1,26 @@
 [tool.poetry]
-name = "mlops-course"
-version = "0.1.0"
+name = "mlops-test-repo"
+version = "1.0.0"
 description = ""
-authors = ["Pavel Kikin <it-technologies@yandex.ru>"]
+authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.9"
+python = ">=3.10,<3.11"
 pandas = "^1.4.2"
-scikit-learn = "^1.0.2"
-lightgbm = "^3.3.2"
-click = "^8.1.2"
-dvc = {extras = ["s3"], version = "^2.10.2"}
-mlflow = "^1.25.1"
 matplotlib = "^3.5.2"
-psycopg2 = "^2.9.3"
+tensorflow = "^2.8.0"
+click = "^8.1.3"
+numpy = "^1.22.3"
+dvc = {extras = ["all"], version = "^2.10.2"}
+scipy = "^1.8.0"
+pywin32 = "^304"
+mlflow = "^1.25.1"
 python-dotenv = "^0.20.0"
-fastapi = {extras = ["all"], version = "^0.78.0"}
-python-multipart = "^0.0.5"
+uvicorn = "^0.17.6"
+fastapi = "^0.78.0"
 
 [tool.poetry.dev-dependencies]
-mypy = "^0.950"
-flake8 = "^4.0.1"
 
 [build-system]
 requires = ["poetry-core>=1.0.0"]
 build-backend = "poetry.core.masonry.api"
-
