--- a/Docker/model_service/Dockerfile
+++ b/Docker/model_service/Dockerfile
@@ -14,9 +14,11 @@ COPY ../../src/app /code/app
 COPY ./Docker/model_service/.env /code/app/.env
 
 
-RUN poetry config virtualenvs.create false && poetry install $(test "$YOUR_ENV" == production && echo "--no-dev") --no-interaction --no-ansi
-  
+# RUN poetry config virtualenvs.create false && poetry install $(test "$YOUR_ENV" == production && echo "--no-dev") --no-interaction --no-ansi
+RUN poetry config virtualenvs.create false
+RUN poetry install
   
 CMD ["uvicorn", "app.inference:app", "--host", "0.0.0.0", "--port", "80"]
 
+# docker build -f Docker/model_service/Dockerfile -t model_service .
 
