--- a/Docker/model_service/pyproject.toml
+++ b/Docker/model_service/pyproject.toml
@@ -1,5 +1,5 @@
 [tool.poetry]
-name = "mlops-test-repo"
+name = "mlops-only-poetry"
 version = "1.0.0"
 description = ""
 authors = ["Your Name <you@example.com>"]
@@ -13,11 +13,12 @@ click = "^8.1.3"
 numpy = "^1.22.3"
 dvc = {extras = ["all"], version = "^2.10.2"}
 scipy = "^1.8.0"
-pywin32 = "^304"
 mlflow = "^1.25.1"
 python-dotenv = "^0.20.0"
 uvicorn = "^0.17.6"
 fastapi = "^0.78.0"
+python-multipart = "^0.0.5"
+psycopg2 = "^2.9.3"
 
 [tool.poetry.dev-dependencies]
 
